--- a/config.yaml.example
+++ b/config.yaml.example
@@ -1,10 +1,20 @@
 # ===== DevOps Agent MCP Server 配置示例 =====
+# 复制为 config.yaml 并填入实际值
+# 配置优先级：环境变量 > config.yaml
 
-gitlab:
-  base_url: "http://your-gitlab-server.com"
-  token: "your-gitlab-personal-access-token"
-  default_branch: "master"
+github:
+  # 环境变量: GITHUB_TOKEN, GITHUB_OWNER
+  token: "your-github-personal-access-token"
+  owner: "your-github-username"
 
 slack:
+  # 环境变量: SLACK_BOT_TOKEN, SLACK_DEFAULT_CHANNEL
   bot_token: "xoxb-your-slack-bot-token"
   default_channel: "#general"
+
+# 禅道（可选，不配置则禅道功能不启用）
+zentao:
+  # 环境变量: ZENTAO_URL, ZENTAO_ACCOUNT, ZENTAO_PASSWORD
+  url: "http://your-zentao-server/zentao"
+  account: "your-account"
+  password: "your-password"
